# model

./: .gitignore  main.py  pyproject.toml  readme.md
.github/workflows/: ci.yml  lint.yml
notebooks/: Untitled.ipynb
scripts/: run-rtdetr.sh  run-yolov11x.sh
src/: __init__.py
src/detectors/: __init__.py  base.py  rtdetr.py  yolo.py
src/utils/: __init__.py  logger.py  video.py
